# eya

./: .gitignore  CMakeLists.txt  compile_flags.txt  custom-cmake-build.cmd  linux-cmake-build.sh  mingw-cmake-build.cmd  ninja-cmake-build.cmd
.github/workflows/: cmake-multi-platform.yml
docs/: CMakeLists.txt  Doxyfile.in
lib/: .clang-format  CMakeLists.txt
lib/cmake/configs/: platform_limits.h.in
lib/cmake/module/: check_type_size.cmake  collect_compile_options.cmake  collect_library_options.cmake  source_files.cmake
lib/cmake/modules/: build_library.cmake  compile_definitions.cmake  config.cmake  generate_config.cmake  get_type_size.cmake  numeric_limits.cmake  parse_version.cmake  platform_limits.cmake  process_cmake_options.cmake  process_compile_options.cmake  source_files.cmake
lib/cmake/options/: build_options.cmake  compiler_debug_options.cmake  compiler_release_options.cmake  debug_options.cmake  library_options.cmake  release_options.cmake
lib/inc/eya/: addr.h  addr_util.h  algorithm_util.h  algorithm_utils.h  aligned_range.h  allocated_array.h  allocated_array_initializer.h  allocated_range.h  allocated_range_initializer.h  array.h  array_fields.h  array_initializer.h  attribute.h  attribute_force_inline.h  attribute_noreturn.h  attribute_symbol.h  attribute_thread_local.h  attribute_unused.h  bit_util.h  bool.h  char.h  compile_option.h  compile_option_fallback.h  compiler_attribute.h  compiler_attribute_force_inline.h  compiler_attribute_noreturn.h  compiler_attribute_symbol.h  compiler_attribute_target.h  compiler_attribute_thread_local.h  compiler_attribute_unused.h  compiler_constructor.h  compiler_cxx.h  compiler_destructor.h  compiler_extern.h  compiler_extern_c.h  compiler_os_type.h  compiler_std_version.h  compiler_type.h  compiler_unreachable.h  compiler_version.h  (+88 more)
lib/src/eya/: addr.c  aligned_range.c  allocated_array.c  allocated_range.c  array.c  date_year.c  error.c  eya.c  memory.c  memory_allocator.c  memory_range.c  memory_raw.c  memory_std.c  memory_typed.c  numeric_fixed_limits.c  numeric_fixed_types.c  runtime_allocator.c  runtime_exception_catch_stack.c  runtime_terminate.c  version.c
src/: CMakeLists.txt
src/cmake/module/: check_type_size.cmake  collect_compile_options.cmake  compile_definitions.cmake  parse_version.cmake  source_files.cmake
src/cmake/options/: clear_options.cmake  compiler_common_options.cmake  compiler_release_options.cmake  library_options.cmake
src/inc/eya/: addr_util.h  algorithm_utils.h  attribute_target.h  attribute_thread_local.h  bit_util.h  char_util.h  compiler.h  compiler_bit_depth.h  compiler_destructor.h  compiler_std_version.h  compiler_unreachable.h  compound_literal.h  error.h  exception_catch.h  interval_util.h  math_util.h  memory.h  memory_allocator_initializer.h  memory_range.h  memory_range_state.h  memory_raw.h  memory_std.h  memory_typed.h  memory_view.h  memory_view_cast.h  memory_view_fields.h  memory_view_state.h  nullptr.h  numeric_limit.h  ptr_util.h  runtime_assert.h  runtime_check_ref.h  runtime_error_code.h  runtime_exception_catch_stack.h  runtime_throw.h  size.h  static_cast.h  static_string_size.h  str_util.h  stringify.h  (+1 more)
src/src/eya/: error.c  memory.c  memory_allocator.c  memory_range.c  memory_raw.c  memory_std.c  memory_typed.c  memory_view.c  runtime_allocator.c  version.c
test/: .clang-format  CMakeLists.txt
test/src/: addr.cpp  array.cpp  date_year.cpp  error.cpp  interval.cpp  main.cpp  memory.cpp  memory_allocator.cpp  memory_range.cpp  memory_raw.cpp  memory_std.cpp  memory_typed.cpp  memory_view.cpp  numeric_clamp.cpp  numeric_interval.cpp  numeric_limits.cpp
